update front of several views

--- a/app/assets/stylesheets/components/_babyshowcard.scss
+++ b/app/assets/stylesheets/components/_babyshowcard.scss
@@ -6,6 +6,13 @@
 }
 
 
+.test {
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 50%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+
+}
+
 .card-baby-info-box {
   position: relative;
   background-color: white;
