--- a/app/views/babies/new.html.erb
+++ b/app/views/babies/new.html.erb
@@ -1,6 +1,6 @@
 <div class="new-baby-container">
 
-<h3> Ajouter ton bébé en location : </h3>
+<h3 class="text-center"> Add your baby: </h3>
 <%= render 'form', baby: @baby%>
 
 </div>
