--- a/app/views/babies/search.html.erb
+++ b/app/views/babies/search.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center">Votre recherche de bébés</h2>
+<h2 class="text-center">Babies around your selected city</h2>
 
 
 <div class="container map-container">
@@ -6,7 +6,7 @@
     <% @babies.each do |baby| %>
         <div class="card-container col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <%= link_to baby_path(baby), class: 'decoration' do %>
-          <div class="card-trip">
+          <div class="card-trip grow">
             <%= cl_image_tag baby.photo %>
             <div class="card-trip-infos">
                 <div class="infos-card">
