change btn purple of booking/new

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -2,7 +2,7 @@
 <%= simple_form_for [baby, booking] do |f| %>
 <%= f.input :start_date, as: :date, html5: true %>
 <%= f.input :end_date, as: :date, html5: true %>
-<%= f.submit "Book my baby", class: "btn btn-success" %>
+<%= f.submit "Book my baby", class: "btn-medium" %>
 <% end %>
 
 
