--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -6,7 +6,7 @@
       <div class="col-md-4 col-md-offset-4">
         <%= render 'form', booking: @booking, baby: @baby %>
       <br>
-      <%= link_to 'Back', baby_path(@baby) %>
+      <%= link_to 'Back', baby_path(@baby), class: "btn-medium" %>
       </div>
     </div>
   </div>
