--- a/app/assets/stylesheets/components/_showbooking.scss
+++ b/app/assets/stylesheets/components/_showbooking.scss
@@ -8,6 +8,7 @@
   width: 700px;
   margin: auto;
   border-radius: 20px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 .message-name-booking {
   margin-left: 30px;
