added changes to footer

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   background-size: cover;
   background-position: center;
-  height: 80vh;
+  height: calc(100vh - 13rem);
   padding: 150px 0;
 }
 
