modif front banner + barre search

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,15 @@
 // Specific CSS for your home-page
+.container-banner {
+  position: relative;
+}
+
+.move-btn-search {
+  position: absolute;
+  right: 620px;
+  bottom: 221px;
+}
+
+
+.container-banner h1 {
+  margin-left: 495px;
+}
