Add cencel btn for booking

--- a/app/assets/stylesheets/components/_showbooking.scss
+++ b/app/assets/stylesheets/components/_showbooking.scss
@@ -39,3 +39,13 @@
     transform: scale(1.07)
   }
 }
+
+.btn-booking {
+  color: white;
+  background: #131664;
+  border-radius: 5px;
+}
+
+.btn-booking:hover {
+  color: white;
+}
