--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: rgb(98,181,156);
+  background: #161968;
   display: flex;
   align-items: center;
   justify-content: center;
