--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
               <%= f.input :city, placeholder: "Paris", input_html: { required: true }  %>
               <%= f.input :age, as: :integer, placeholder: "1" %>
               <%= f.input :price, as: :integer, placeholder: "30"  %>
-              <%= f.button :submit, "Search", class: 'btn btn-success' %>
+              <%= f.button :submit, "Search", class: 'btn btn-success violet' %>
           <% end %>
 <!--         </div>
       </div>
