--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,12 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-
+// @import url("https://fonts.googleapis.com/css?family=Cookie");
+// @import url("https://fonts.googleapis.com/css?family=Caveat|Devonshire");
+// @import url("https://fonts.googleapis.com/css?family=Hind+Vadodara");
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Lobster|Pacifico');
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+$body-font: 'Comfortaa', "Helvetica", "sans-serif";
+$headers-font: 'Lobster', "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
