fixed h1 on the home page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,10 +6,10 @@
 }
 
 .banner h1 {
-  margin-left: 39%;
+  text-align: center;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
+  font-size: 7rem;
   font-weight: bold;
 }
 
