--- a/app/assets/stylesheets/components/_updatebaby.scss
+++ b/app/assets/stylesheets/components/_updatebaby.scss
@@ -9,3 +9,21 @@
 .btn-medium-update {
   margin-top: 180px;
 }
+.btn-medium-new-booking {
+  margin-left: 200px;
+}
+.edit-title{
+  display: flex;
+  position: relative;
+  margin-left: 60px;
+}
+#delete-btn{
+  position: absolute;
+  top: 532px;
+  right: 350px;
+}
+
+.trash-css {
+  color: #161968;
+  font-size: 30px;
+}
