--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,42 +1,42 @@
-.navbar-lewagon {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: white;
-  padding: 16px 24px;
-  height: 8rem;
-}
+// .navbar-lewagon {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   background: white;
+//   padding: 16px 24px;
+//   height: 8rem;
+// }
 
-.navbar-lewagon .brand {
-  width: 40px;
-}
+// .navbar-lewagon .brand {
+//   width: 40px;
+// }
 
-.navbar-lewagon .navbar-lewagon-actions {
-  display: flex;
-  align-items: center;
-}
+// .navbar-lewagon .navbar-lewagon-actions {
+//   display: flex;
+//   align-items: center;
+// }
 
-.navbar-lewagon .navbar-lewagon-actions .navbar-lewagon-link {
-  margin-left: 24px;
-  color: #999999;
-}
-.navbar-lewagon .navbar-lewagon-actions .navbar-lewagon-link:hover {
-  color: #151515;
-}
+// .navbar-lewagon .navbar-lewagon-actions .navbar-lewagon-link {
+//   margin-left: 24px;
+//   color: #999999;
+// }
+// .navbar-lewagon .navbar-lewagon-actions .navbar-lewagon-link:hover {
+//   color: #151515;
+// }
 
 
-.navbar-lewagon .navbar-lewagon-actions .avatar {
-  margin-left: 24px;
-}
+// .navbar-lewagon .navbar-lewagon-actions .avatar {
+//   margin-left: 24px;
+// }
 
-.navbar-lewagon .dropdown-toggle {
-  cursor: pointer;
-}
+// .navbar-lewagon .dropdown-toggle {
+//   cursor: pointer;
+// }
 
-.avatar{
-  border-radius: 50%;
-  width: 50px;
-}
+// .avatar{
+//   border-radius: 50%;
+//   width: 50px;
+// }
 
 .bebe {
   width: 45px;
@@ -44,4 +44,87 @@
 }
 .bebe-logo {
   width: 80px;
+}
+
+
+/* Main navbar */
+.navbar-wagon {
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  background: white;
+  transition: all 0.3s ease;
+  height: 8rem;
+  padding: 0px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Logo */
+.navbar-wagon-brand img {
+  height: 50px;
+}
+
+/* User Avatar */
+.navbar-wagon .avatar {
+  height: 52px;
+  width: 35px;
+  border-radius: 50%;
+}
+
+/* Right section */
+.navbar-wagon-right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar-wagon-right a{
+  margin: 5px;
+}
+
+/* Basic navbar item */
+.navbar-wagon-item {
+  cursor: pointer;
+  padding: 0 20px;
+}
+
+/* Navbar link */
+.navbar-wagon-link {
+  color: #616668;
+  font-size: 14px;
+}
+.navbar-wagon-link:hover {
+  color: #da552f;
+  text-decoration: none;
+}
+
+/* Dropdown menu */
+.navbar-wagon-dropdown-menu {
+  margin-top: 15px;
+  box-shadow: 1px 1px 4px #E6E6E6;
+  border-color: #E6E6E6;
+}
+.navbar-wagon-dropdown-menu li > a {
+  transition: color 0.3s ease;
+  font-weight: lighter !important;
+  color: #999999 !important;
+  font-size: 15px !important;
+  line-height: 22px !important;
+  padding: 10px 20px;
+}
+.navbar-wagon-dropdown-menu li > a:hover {
+  background: transparent !important;
+  color: black !important;
+}
+.navbar-wagon-dropdown-menu:before {
+  content: ' ';
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  right: 10px;
+  top: -6px;
+  background-color: white;
+  transform: rotate(45deg);
+  border-left: 1px solid #E6E6E6;
+  border-top: 1px solid #E6E6E6;
 }
