--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,6 +4,7 @@
   <br>
     <div class="col-md-4 col-md-offset-4">
       <%= simple_form_for [@baby, @review] do |f| %>
+        <%= f.input :title %>
         <%= f.input :content %>
         <%= f.input :rating %>
         <%= f.submit "Add a review", :class => "btn-medium" %>
