--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   padding: 0px 50px;
   color: white;
-  position: absolute;
+  // position: absolute;
   left:0px;
   bottom:0px;
   width:100%;
