--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,23 +2,34 @@
   <h2 class="text-center-booking text-center">My bookings</h2>
 
   <% @bookings.each do |booking|%>
+
     <div class="booking-body">
       <div class="message image-booking">
-        <%= cl_image_tag booking.baby.photo, width: 80, height: 80, crop: :fill%>
 
-        <div class="message-name message-name-booking">
-          <%= booking.baby.name %>
-          <p class="margin-date">From : <%= booking.start_date.strftime("%d-%m-%Y") %></p>
-          <p>To : <%= booking.end_date.strftime("%d-%m-%Y") %></p>
+          <%#= link_to baby_path(booking.baby), class: "decoration" do %>
 
-      </div>
-        <div class="message-status message-status-booking">
-          <p class="status accepted">Accepted</p>
-          <p class="price"> </p>
-            $ <%= (booking.end_date - booking.start_date).to_i * booking.baby.price %>
-          </p>
-           <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Do you want to cancel your booking ?" }, class: "btn btn-booking" %>
-        </div>
+
+          <div class="message-name message-name-booking contenu-card">
+            <%= cl_image_tag booking.baby.photo, width: 80, height: 80, crop: :fill, :radius => "max"%>
+            <div class="list-detail">
+
+                  <li><%= booking.baby.name %></li>
+                  <li>From : <%= booking.start_date.strftime("%d-%m-%Y") %></li>
+                  <li>To : <%= booking.end_date.strftime("%d-%m-%Y") %></li>
+
+            </div>
+          </div>
+
+
+          <div class="message-status message-status-booking">
+            <p class="status accepted">Accepted</p>
+            <p class="price"> </p>
+              $ <%= (booking.end_date - booking.start_date).to_i * booking.baby.price %>
+            </p>
+             <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Do you want to cancel your booking ?" }, class: "btn btn-booking" %>
+          </div>
+        <%# end %>
+
       </div>
     </div>
   <% end %>
