--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,8 +3,8 @@
 }
 
 #map {
-  flex: 0 0 450px;
-  height: 100vh;
+  flex: 0 0 42%;
+  // height: 100vh;
   position: sticky !important; /* !important to override Gmaps inline CSS */
   top: 0 !important;
 }
