--- a/app/views/babies/search.html.erb
+++ b/app/views/babies/search.html.erb
@@ -12,9 +12,9 @@
                 <div class="infos-card">
                   <h2><%= baby.name %></h2>
                     <% if baby.age > 1 %>
-                      <p>Age: <%= baby.age %> ans</p>
+                      <p>Age: <%= baby.age %> year old</p>
                     <% else %>
-                      <p>Age: <%= baby.age %> an</p>
+                      <p>Age: <%= baby.age %> years old</p>
                     <% end %>
                   <p>City: <%= baby.city %></p>
                 </div>
@@ -29,11 +29,11 @@
 <div
   id="map"
   style="width: 100%;
-  height: 600px;"
+  height: 100vh; left-margin: 15px;"
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
 </div>
 <div class="text-center">
-<%= link_to "Retour", root_path(@baby), :class => "btn btn-primary" %>
+<%= link_to "Retour", root_path(@baby), :class => "btn btn-primary marge-bouton" %>
 </div>
