added margin on the baby show for the review part

--- a/app/assets/stylesheets/components/_babyshowcard.scss
+++ b/app/assets/stylesheets/components/_babyshowcard.scss
@@ -43,8 +43,12 @@
   margin-bottom: 30px;
 }
 
-.review h2 {
-  line-height: 1.4;
+// .review h2 {
+//   line-height: 1.4;
+// }
+
+#reviews{
+  margin-top: 35px;
 }
 
 .baby-description {
