harmonization btn retour page results

--- a/app/views/babies/search.html.erb
+++ b/app/views/babies/search.html.erb
@@ -35,5 +35,5 @@
 ></div>
 </div>
 <div class="text-center">
-<%= link_to "Retour", root_path(@baby), :class => "btn btn-primary marge-bouton" %>
+<%= link_to "Retour", root_path(@baby), :class => "btn btn-primary marge-bouton btn-medium" %>
 </div>
