--- a/app/views/babies/search.html.erb
+++ b/app/views/babies/search.html.erb
@@ -4,19 +4,21 @@
 <div class="container map-container">
   <div class="row">
     <% @babies.each do |baby| %>
-        <div class="card-container col-xs-12 col-sm-6 col-md-4 col-lg-4">
+        <div class="card-container col-xs-12 col-sm-6 col-md-4 col-lg-3">
       <%= link_to baby_path(baby), class: 'decoration' do %>
           <div class="card-trip grow">
             <%= cl_image_tag baby.photo %>
             <div class="card-trip-infos">
                 <div class="infos-card">
                   <h2><%= baby.name %></h2>
+                  <div class="nom-bebe">
                     <% if baby.age > 1 %>
                       <p>Age: <%= baby.age %> year old</p>
                     <% else %>
                       <p>Age: <%= baby.age %> years old</p>
                     <% end %>
-                  <p>City: <%= baby.city %></p>
+                    <p>City: <%= baby.city %></p>
+                  </div>
                 </div>
               <h2 class="card-trip-pricing"><%= baby.price %>$</h2>
             </div>
