--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,7 @@
 
   <div class="container">
     <div class="row">
-    <h2 class="text-center">Book <%= @baby.name %> :</h2>
+    <h2 class="text-center">Book <%= @baby.name %></h2>
       <br>
       <div class="col-md-4 col-md-offset-4">
         <%= render 'form', booking: @booking, baby: @baby %>
