--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -23,7 +23,7 @@
 
           <div class="message-status message-status-booking">
             <p class="status accepted">Accepted</p>
-            <p class="price"> </p>
+            <p class="price">
               $ <%= (booking.end_date - booking.start_date).to_i * booking.baby.price %>
             </p>
              <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Do you want to cancel your booking ?" }, class: "btn btn-booking" %>
